8231427: Warning cleanup in tests of java.io.Serializable
Reviewed-by: darcy, lancea